--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -1,6 +1,14 @@
 ﻿{
   "configurations": [
     {
+      "name": "Debug",
+      "generator": "Ninja",
+      "configurationType": "Debug",
+      "inheritEnvironments": [ "msvc_x86" ],
+      "buildRoot": "${projectDir}\\build\\${name}",
+      "installRoot": "${projectDir}\\build\\${name}"
+    },
+    {
       "name": "Release",
       "generator": "Ninja",
       "configurationType": "Release",
