Backport LSB useful xiloader changes
Main ones of concern:
Attempt to notify windows process is DPI aware (FFXI doesnt handle DPI scaling well)
Remove pointless warning about certificates not being valid
Fix search sometimes not working due to shenanigans

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,9 @@ add_executable(xiloader
     src/main.cpp
     src/network.cpp
     src/network.h
-    src/polcore.h)
+    src/polcore.h
+    xiloader.manifest
+)
 
 set_target_properties(xiloader PROPERTIES LINK_FLAGS "/LARGEADDRESSAWARE")
 
